; ModuleID = '/home/carl/AnghaBench/tmux/extr_tty.c_tty_window_bigger.c'
source_filename = "/home/carl/AnghaBench/tmux/extr_tty.c_tty_window_bigger.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tty = type { i64, i64, %struct.client* }
%struct.client = type { %struct.TYPE_4__* }
%struct.TYPE_4__ = type { %struct.TYPE_3__* }
%struct.TYPE_3__ = type { %struct.window* }
%struct.window = type { i64, i64 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @tty_window_bigger(%struct.tty* %0) #0 {
  %2 = alloca %struct.tty*, align 8
  %3 = alloca %struct.client*, align 8
  %4 = alloca %struct.window*, align 8
  store %struct.tty* %0, %struct.tty** %2, align 8
  %5 = load %struct.tty*, %struct.tty** %2, align 8
  %6 = getelementptr inbounds %struct.tty, %struct.tty* %5, i32 0, i32 2
  %7 = load %struct.client*, %struct.client** %6, align 8
  store %struct.client* %7, %struct.client** %3, align 8
  %8 = load %struct.client*, %struct.client** %3, align 8
  %9 = getelementptr inbounds %struct.client, %struct.client* %8, i32 0, i32 0
  %10 = load %struct.TYPE_4__*, %struct.TYPE_4__** %9, align 8
  %11 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %10, i32 0, i32 0
  %12 = load %struct.TYPE_3__*, %struct.TYPE_3__** %11, align 8
  %13 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %12, i32 0, i32 0
  %14 = load %struct.window*, %struct.window** %13, align 8
  store %struct.window* %14, %struct.window** %4, align 8
  %15 = load %struct.tty*, %struct.tty** %2, align 8
  %16 = getelementptr inbounds %struct.tty, %struct.tty* %15, i32 0, i32 0
  %17 = load i64, i64* %16, align 8
  %18 = load %struct.window*, %struct.window** %4, align 8
  %19 = getelementptr inbounds %struct.window, %struct.window* %18, i32 0, i32 0
  %20 = load i64, i64* %19, align 8
  %21 = icmp slt i64 %17, %20
  br i1 %21, label %33, label %22

22:                                               ; preds = %1
  %23 = load %struct.tty*, %struct.tty** %2, align 8
  %24 = getelementptr inbounds %struct.tty, %struct.tty* %23, i32 0, i32 1
  %25 = load i64, i64* %24, align 8
  %26 = load %struct.client*, %struct.client** %3, align 8
  %27 = call i64 @status_line_size(%struct.client* %26)
  %28 = sub nsw i64 %25, %27
  %29 = load %struct.window*, %struct.window** %4, align 8
  %30 = getelementptr inbounds %struct.window, %struct.window* %29, i32 0, i32 1
  %31 = load i64, i64* %30, align 8
  %32 = icmp slt i64 %28, %31
  br label %33

33:                                               ; preds = %22, %1
  %34 = phi i1 [ true, %1 ], [ %32, %22 ]
  %35 = zext i1 %34 to i32
  ret i32 %35
}

declare dso_local i64 @status_line_size(%struct.client*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
